--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.15.3",
     "dotenv": "^4.0.0",
     "express": "^4.14.1",
+    "lodash": "^4.17.4",
     "pg-promise": "^5.5.6",
     "pm2": "^2.3.0"
   }
